--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,92 @@
 body {
-  background: papayawhip;
+  background: blanchedalmond;
+  font-size: 3px;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+}
+
+* {
+  border: 1px solid hotpink;
+
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100hv;
+  background-color: #ccc;
+  color: hotpink 2px;
+}
+
+.a, .b, .c, .d, .e, .f {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  background-color: #ccc;
+  border: hotpink 2px;
+}
+
+.a {
+}
+
+.b {
+  height: 400px;
+}
+
+.c {
+  width: 33.333;
+}
+
+.d {
+  width: 33.333%;
+}
+
+.e {
+  width: 33.333;
+}
+
+.f {
+}
+
+.bcdef {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.bcde {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.cde {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+@media only screen and (min-width: 992px) {
+
+  .bcdef {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .bcde {
+    width: 75%;
+  }
+
+  .f {
+    width: 25%;
+    height: auto;
+  }
+
+  .a, .b, .c, .d, .e {
+    height: 200px;
+  }
 }
