--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,76 @@
 body {
   background: peachpuff;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.a, .b, .c, .d, .e, .f, .g, .h {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100px;
+  background-color: #ccc;
+  border: hotpink 2px;
+}
+
+.b, .c, .d, .e, .f, .g {
+  width: calc((100%/3) - (3rem / 3));
+}
+
+.a {
+}
+
+.b {
+}
+
+.c {
+}
+
+.d {
+}
+
+.f {
+}
+
+.g{
+}
+
+.h {
+  height: 300px;
+  display: flex;
+}
+
+.bcdefg {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media only screen and (min-width: 992px) 
+{
+
+  .a, .b, .c, .d, .e, .f, .g, .h {
+    height: 200px;
+  }
+
+  .bcdefgh {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+
+  .bcdefg {
+    width: 25%;
+    height: auto;
+  }
+
+
 }
